# dotlyte

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOTLYTE_Full_Report.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: dotnet.instructions.md  go.instructions.md  java.instructions.md  javascript.instructions.md  php.instructions.md  python.instructions.md  ruby.instructions.md  rust.instructions.md
.github/workflows/: ci-dotnet.yml  ci-go.yml  ci-java.yml  ci-javascript.yml  ci-php.yml  ci-python.yml  ci-ruby.yml  ci-rust.yml
docs/: package.json  pnpm-lock.yaml  tsconfig.json
docs/.next/: prerender-manifest.json  trace
docs/.next/cache/: .rscinfo
docs/.next/server/: server-reference-manifest.json
docs/.next/types/: validator.ts
docs/.source/: browser.ts  server.ts
docs/app/: global.css  layout.config.tsx  layout.tsx  page.tsx
docs/content/docs/: boundary-config.mdx  cli.mdx  contributing.mdx  encryption.mdx  environment-files.mdx  getting-started.mdx  index.mdx  installation.mdx  masking.mdx  meta.json  priority-order.mdx  quick-start.mdx  type-coercion.mdx  typed-config.mdx  workspace.mdx
docs/lib/: source.ts
langs/dotnet/: CHANGELOG.md  Dotlyte.sln  README.md
langs/go/: CHANGELOG.md  README.md  boundaries.go  boundaries_test.go  coercion.go  coercion_test.go  config.go  doc.go  encryption.go  errors.go  go.mod  go.sum  interpolation.go  loader.go  loader_test.go  masking.go  merger.go  parser_dotenv.go  parser_env.go  parser_json.go  parser_toml.go  parser_yaml.go  typed.go  typed_test.go  validator.go  watcher.go  workspace.go  workspace_test.go
langs/java/: CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
langs/javascript/: CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
langs/javascript/src/: boundaries.ts  coercion.ts  config.ts  encryption.ts  errors.ts  index.ts  interpolation.ts  loader.ts  masking.ts  merger.ts  typed.ts  validator.ts  watcher.ts  workspace.ts
langs/javascript/tests/: boundaries.test.ts  coercion.test.ts  enhanced-features.test.ts  loader.test.ts  next.test.ts  ssr.test.ts  typed.test.ts  valibot-adapter.test.ts  workspace.test.ts  zod-adapter.test.ts
langs/php/: .phpunit.result.cache  CHANGELOG.md  README.md  composer.json
langs/php/src/: AuditProxy.php  BoundaryConfig.php  Coercion.php  Config.php  Dotlyte.php  DotlyteException.php  Encryption.php  Interpolation.php  LoadOptions.php  Loader.php  Masking.php  Merger.php  SchemaRule.php  SchemaViolation.php  TypedConfig.php  Validator.php  Workspace.php
langs/php/tests/: BoundaryConfigTest.php  CoercionTest.php  (+10 more)
langs/python/: CHANGELOG.md  README.md  pyproject.toml
langs/python/src/dotlyte/: __init__.py  boundaries.py  coercion.py  config.py  encryption.py  errors.py  interpolation.py  loader.py  masking.py  merger.py  typed.py  validator.py  watcher.py  workspace.py
langs/python/src/dotlyte/cli/: __init__.py  check.py  diff.py  doctor.py  encrypt.py  generate_types.py  init.py
langs/python/src/dotlyte/parsers/: __init__.py  defaults.py  dotenv.py  env.py  json.py  toml.py  yaml.py
langs/python/tests/: conftest.py  test_boundaries.py  test_coercion.py  test_enhanced_encryption.py  test_enhanced_masking.py  test_loader.py  test_typed.py  test_workspace.py
langs/ruby/: CHANGELOG.md  Gemfile  README.md  dotlyte.gemspec
langs/rust/: CHANGELOG.md  Cargo.toml  README.md
langs/rust/src/: boundaries.rs  coercion.rs  config.rs  encryption.rs  errors.rs  interpolation.rs  lib.rs  loader.rs  masking.rs  merger.rs  typed.rs  validator.rs  watcher.rs  workspace.rs
langs/rust/src/parsers/: dotenv.rs  env.rs  json.rs  mod.rs  toml.rs  yaml.rs
langs/rust/tests/: boundaries_test.rs  typed_test.rs  workspace_test.rs
scripts/: PUBLISHING.md
spec/: README.md  api.md  priority.md  schema.json  type-coercion.md
(+134 files in other folders)
