[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotlyte"
version = "0.1.2"
description = "The universal .env and configuration library. One API for every language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "DOTLYTE Contributors" }]
keywords = ["dotenv", "config", "configuration", "env", "environment", "yaml", "toml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
encryption = [
    "cryptography>=42.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.13",
    "cryptography>=42.0",
]

[project.scripts]
dotlyte = "dotlyte.cli:main"

[project.urls]
Homepage = "https://github.com/dotlyte-io/dotlyte"
Documentation = "https://dotlyte.dev"
Repository = "https://github.com/dotlyte-io/dotlyte/tree/main/langs/python"
Issues = "https://github.com/dotlyte-io/dotlyte/issues"
Changelog = "https://github.com/dotlyte-io/dotlyte/blob/main/langs/python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/dotlyte"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "D"]
ignore = ["D100", "D104", "D203", "D213", "D102", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["dotlyte"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
