[package]
name = "dotlyte"
version = "0.1.2"
edition = "2021"
authors = ["DOTLYTE Contributors"]
description = "The universal .env and configuration library. One API for every language."
license = "MIT"
repository = "https://github.com/dotlyte-io/dotlyte/tree/main/langs/rust"
homepage = "https://dotlyte.dev"
readme = "README.md"
keywords = ["dotenv", "config", "configuration", "env", "yaml"]
categories = ["config"]
rust-version = "1.70"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
regex = "1"

# Encryption (optional)
aes-gcm = { version = "0.10", optional = true }
scrypt = { version = "0.11", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["yaml", "toml-support"]
yaml = ["dep:serde_yaml"]
toml-support = ["dep:toml"]
encryption = ["dep:aes-gcm", "dep:scrypt", "dep:base64", "dep:hex"]
